# algraf

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  algraf.rs  version-0.1.0-todos.md
.github/workflows/: ci.yml  demo-pages.yml
bench/: README.md
bench/baselines/full-baseline-20260606/: environment.txt  report.csv
bench/examples/large/: million_row_summary_bin.ag  sfo_airline_counts.ag  sfo_daily_flights.ag  sfo_event_counts.ag  sfo_route_density.ag  synthetic_bin2d_density.ag  synthetic_nullable_histogram.ag  synthetic_projection_smoke.ag  synthetic_raw_mark_budget.ag  (+4 more)
crates/algraf-bench/: Cargo.toml
crates/algraf-bench/src/: main.rs
crates/algraf-cli/: Cargo.toml
crates/algraf-cli/src/: astjson.rs  cmd_ast.rs  cmd_check.rs  cmd_format.rs  cmd_init.rs  cmd_ir.rs  cmd_lsp.rs  cmd_render.rs  cmd_schema.rs  cmd_source.rs  diagnostics.rs  error.rs  input.rs  io.rs  ir_json.rs  main.rs  png.rs  svg_debug.rs
crates/algraf-cli/templates/: ALGRAF_LANG.md  ALGRAF_LANGUAGE.md  ALGRAF_TOOLING.md
crates/algraf-cli/tests/: cli.rs
crates/algraf-core/: Cargo.toml
crates/algraf-data/: Cargo.toml
crates/algraf-data/examples/: generate_large_fixtures.rs  prepare_large_fixtures.rs
crates/algraf-data/src/: arrow_convert.rs  arrow_stream.rs  csv.rs  error.rs  format.rs  frame.rs  geojson.rs  infer.rs  json.rs  lib.rs  parquet.rs  schema.rs  shapefile.rs  sqlite.rs  sqlite_stub.rs  temporal.rs  topojson.rs  value.rs
crates/algraf-data/tests/: arrow_stream.rs  formats.rs  geo.rs  inference.rs  parquet.rs
crates/algraf-data/tests/fixtures/: tiny.geojson  tiny.topojson
crates/algraf-driver/: Cargo.toml
crates/algraf-driver/src/: cache.rs  error.rs  io.rs  lib.rs  loading.rs  prepare.rs  report.rs  resolution.rs  variables.rs
crates/algraf-editor-services/: Cargo.toml
crates/algraf-editor-services/src/: analysis.rs  code_actions.rs  completion.rs  diagnostics.rs  document.rs  hover.rs  inlay.rs  lib.rs  navigation.rs  positions.rs  semantic_tokens.rs  service.rs  signature.rs  symbols.rs
crates/algraf-lsp/: Cargo.toml
crates/algraf-lsp/src/: analysis.rs  backend.rs  code_actions.rs  completion.rs  diagnostics.rs  document.rs  hover.rs  inlay.rs  lib.rs  navigation.rs  positions.rs  preview.rs  semantic_tokens.rs  signature.rs  symbols.rs
crates/algraf-lsp/tests/: lsp.rs
crates/algraf-render/: Cargo.toml
crates/algraf-render/src/: aes.rs  domains.rs  embed.rs  error.rs  geo_stats.rs  geom.rs  guide.rs  helpers.rs  layout.rs  lib.rs  marker.rs  projection.rs  render.rs  scale.rs  sink.rs  space.rs  stats.rs  svg.rs  theme.rs
crates/algraf-render/src/geom/: annotation.rs  bar.rs  common.rs  distribution.rs  geo.rs  graticule.rs  image.rs  line.rs  mod.rs  point.rs  polar.rs  rect_tile.rs  stack.rs  text.rs
crates/algraf-render/src/guide/: emit.rs  mod.rs  plan.rs
crates/algraf-render/src/render/: assets.rs  backend.rs  common.rs  derived.rs  document.rs  draw_list.rs  glyph_paint.rs  glyph_plan.rs  inset.rs  inset_paint.rs  inset_plan.rs  legend.rs  metadata.rs  panel_space.rs  panels.rs  raster.rs  row_table.rs  spatial.rs
crates/algraf-render/src/space/: polar.rs  temporal.rs
crates/algraf-render/src/stats/: bin.rs  density.rs  mod.rs  primitive.rs  smooth.rs  summary.rs  util.rs  zfield.rs
crates/algraf-render/tests/: determinism.rs  draw_list.rs  geo.rs  intervals.rs  parity.rs  raster.rs  render.rs  v0_41.rs  v0_83.rs
crates/algraf-render/tests/common/: mod.rs
crates/algraf-semantics/: Cargo.toml
crates/algraf-semantics/src/: analyzer.rs  ir.rs  lib.rs  planning.rs  registry.rs  util.rs
crates/algraf-semantics/src/analyzer/: args.rs  chart.rs  context.rs  frames.rs  guides.rs  lowering.rs  properties.rs  scales.rs  stats.rs  tables.rs  themes.rs
crates/algraf-semantics/tests/: analysis.rs
crates/algraf-syntax/: Cargo.toml
crates/algraf-wasm/: Cargo.toml
crates/algraf-wasm/src/: lib.rs
crates/algraf-wasm/web/: run-wasi.mjs
demo/: README.md  index.html  package-lock.json  package.json  vite.config.ts
demo/public/: homepage.ag
demo/src/: AlgrafChart.tsx  AlgrafEditor.tsx  App.tsx  algrafWasm.ts  editorProviders.ts  editorSetup.ts  styles.css
docs/: ALGRAF_SPEC.md  ARCHITECTURE_REVIEW.md  ARROW_PERFORMANCE.md  CACHE_POLICY.md  GANTT_SPACE_ALGEBRA.md  NPM_PACKAGES.md  PERFORMANCE_BASELINE.md  V0_100_PLAN.md  V0_10_PLAN.md  V0_11_PLAN.md  V0_12_PLAN.md  V0_13_PLAN.md  V0_14_PLAN.md  V0_15_PLAN.md  V0_16_PLAN.md  V0_17_PLAN.md  V0_18_PLAN.md  V0_19_PLAN.md  V0_20_PLAN.md  V0_21_PLAN.md  V0_22_PLAN.md  V0_23_PLAN.md  V0_24_PLAN.md  V0_25_PLAN.md  V0_26_PLAN.md  V0_27_PLAN.md  V0_28_PLAN.md  V0_29_PLAN.md  V0_2_PLAN.md  V0_30_PLAN.md  V0_31_PLAN.md  V0_32_PLAN.md  V0_33_PLAN.md  V0_34_PLAN.md  V0_35_5_PLAN.md  V0_35_PLAN.md  V0_36_PLAN.md  V0_37_PLAN.md  V0_38_PLAN.md  V0_39_5_PLAN.md  (+78 more)
editors/monaco/: README.md  package-lock.json  package.json
editors/vscode/: .vscodeignore  LICENSE.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
examples/: README.md  activity.csv  annotated_heatmap.ag  annotated_intervals.ag  annular_heatmap.ag  area.ag  area_layouts.csv  aspect_segments.csv  astronauts.ag  bar_count.ag  barcode.ag  baseball.ag  baseball.csv  bin2d.ag  binned_heatmap_overlay.ag  binned_regression_chain.ag  binned_scale.ag  boxplot.ag  boxplot_outliers.ag  brand_points.csv  breaks_labels_expansion.ag  bubble.ag  candlestick.ag  categorical_domain_order.ag  categorical_domain_order.csv  cb_2018_us_county_20m.dbf  cb_2018_us_county_20m.shp  cb_2018_us_county_20m.shx  choropleth.ag  choropleth_graticule.ag  choropleth_shapefile.ag  circular_histogram.ag  circular_hours.csv  cities.csv  city_population_mix.csv  clean_canvas.ag  co2_gdp.csv  connected_scatter.ag  contour_bands.ag  contour_lines.ag  (+246 more)
examples/fixtures/: build_counties.sh
scripts/: download-large-fixtures.sh  generate-large-fixtures.sh  generate-million-row-csv.sh  perf-baseline.sh  prepare-large-fixtures.sh  render-large-demos.sh  render-timing.sh  sync-editor-assets.mjs
tests/: README.md
(+62 files in other folders)
