[workspace]
resolver = "2"
members = [
    "crates/algraf-core",
    "crates/algraf-syntax",
    "crates/algraf-data",
    "crates/algraf-semantics",
    "crates/algraf-driver",
    "crates/algraf-render",
    "crates/algraf-editor-services",
    "crates/algraf-lsp",
    "crates/algraf-cli",
    "crates/algraf-wasm",
]

[workspace.package]
version = "0.66.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/williamcotton/algraf"
rust-version = "1.80"

[workspace.dependencies]
# Internal crates
algraf-core = { path = "crates/algraf-core" }
algraf-syntax = { path = "crates/algraf-syntax" }
# The four feature-bearing crates default `sql` off here so consumers (notably
# the WASM runtime) opt in explicitly; native binaries (cli, lsp) re-enable it.
algraf-data = { path = "crates/algraf-data", default-features = false }
algraf-semantics = { path = "crates/algraf-semantics", default-features = false }
algraf-driver = { path = "crates/algraf-driver", default-features = false }
algraf-render = { path = "crates/algraf-render", default-features = false }
algraf-editor-services = { path = "crates/algraf-editor-services", default-features = false }
algraf-lsp = { path = "crates/algraf-lsp" }

# External dependencies (see spec §23.3)
clap = { version = "4", features = ["derive"] }
logos = "0.14"
rowan = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
resvg = "0.45"
tiny-skia = "0.11"
png = "0.17"
csv = "1"
chrono = "0.4"
chrono-tz = "0.10"
indexmap = "2"
geo-types = "0.7"
geojson = { version = "0.24", features = ["geo-types"] }
shapefile = { version = "0.6", features = ["geo-types"] }
proj4rs = "0.1"
libsqlite3-sys = "0.27"
thiserror = "2"
tower-lsp = "0.20"
lsp-types = "0.94.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync"] }
dashmap = "6"
insta = "1"
pretty_assertions = "1"
parquet = "53"
arrow-array = "53"
arrow-ipc = "53"
arrow-schema = "53"
bytes = "1"
