[package]
name = "algraf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "algraf"
path = "src/main.rs"

[dependencies]
algraf-core = { workspace = true }
algraf-syntax = { workspace = true }
algraf-semantics = { workspace = true }
algraf-driver = { workspace = true }
algraf-data = { workspace = true }
algraf-render = { workspace = true }
algraf-lsp = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
resvg = { workspace = true }
tiny-skia = { workspace = true }
png = { workspace = true }
