[package]
name = "algraf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "algraf"
path = "src/main.rs"

[dependencies]
algraf-core = { workspace = true }
algraf-syntax = { workspace = true }
algraf-semantics = { workspace = true }
algraf-driver = { workspace = true, features = ["parquet"] }
algraf-data = { workspace = true, features = ["parquet"] }
# Native binary: re-enable the SQLite backend the workspace defaults off; the
# `sql` feature cascades to data/semantics/driver through render.
algraf-render = { workspace = true, features = ["sql"] }
algraf-lsp = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
resvg = { workspace = true }
tiny-skia = { workspace = true }
png = { workspace = true }

[dev-dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true, features = ["arrow"] }
