[package]
name = "algraf-data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
algraf-core = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
indexmap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
geo-types = { workspace = true }
geojson = { workspace = true }
shapefile = { workspace = true }
libsqlite3-sys = { workspace = true }
