[package]
name = "algraf-data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
algraf-core = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
indexmap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
geo-types = { workspace = true }
geojson = { workspace = true }
shapefile = { workspace = true }
libsqlite3-sys = { workspace = true, optional = true }
parquet = { workspace = true, optional = true, features = ["arrow"] }
arrow-array = { workspace = true, optional = true }
arrow-ipc = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

[features]
default = ["sql"]
# Local SQLite data sources (spec §10.12). Pulls the native `libsqlite3-sys` C
# library, so it is excluded from the WASM build, which has no C linker.
sql = ["dep:libsqlite3-sys"]
parquet = ["dep:parquet", "dep:arrow-array", "dep:arrow-schema", "dep:bytes"]
arrow-stream = ["dep:arrow-ipc", "dep:arrow-array", "dep:arrow-schema"]
