[package]
name = "algraf-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
algraf-core = { workspace = true }
algraf-syntax = { workspace = true }
algraf-data = { workspace = true }
algraf-semantics = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
