[package]
name = "algraf-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
algraf-core = { workspace = true }
algraf-syntax = { workspace = true }
algraf-data = { workspace = true }
algraf-semantics = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["sql"]
# Forward the native SQLite backend (spec §10.12); off in the WASM build.
sql = ["algraf-data/sql", "algraf-semantics/sql"]

[dev-dependencies]
tokio = { workspace = true }
