[package]
name = "algraf-editor-services"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
algraf-core = { workspace = true }
algraf-syntax = { workspace = true }
algraf-semantics = { workspace = true }
algraf-driver = { workspace = true }
algraf-data = { workspace = true }
lsp-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["sql"]
sql = ["algraf-data/sql", "algraf-semantics/sql", "algraf-driver/sql"]
