[package]
name = "algraf-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
algraf-core = { workspace = true }
algraf-syntax = { workspace = true }
algraf-semantics = { workspace = true }
algraf-data = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tower-service = "0.3"
