[package]
name = "algraf-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
algraf-core = { workspace = true }
algraf-syntax = { workspace = true }
algraf-semantics = { workspace = true }
algraf-driver = { workspace = true }
algraf-data = { workspace = true }
algraf-editor-services = { workspace = true, features = ["sql"] }
# Native server: re-enable the SQLite backend the workspace defaults off; the
# `sql` feature cascades to data/semantics/driver through render.
algraf-render = { workspace = true, features = ["sql"] }
tower-lsp = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
futures-util = "0.3"
serde_json = { workspace = true }
tower-service = "0.3"
