[package]
name = "algraf-render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
algraf-core = { workspace = true }
algraf-semantics = { workspace = true }
algraf-data = { workspace = true }
algraf-driver = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
geo-types = { workspace = true }
proj4rs = { workspace = true }
serde_json = { workspace = true }
resvg = { workspace = true }
tiny-skia = { workspace = true }
png = { workspace = true }

[features]
default = ["sql"]
# Forward the native SQLite backend (spec §10.12); off in the WASM build.
sql = ["algraf-data/sql", "algraf-semantics/sql", "algraf-driver/sql"]

[[bin]]
name = "render-timing"
path = "src/bin/render_timing.rs"

[dev-dependencies]
algraf-syntax = { workspace = true }
